--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -88,11 +88,13 @@ a {
 
 .nav_logo,
 .nav_link {
+    
+    justify-content: center;
     display: grid;
     grid-template-columns: max-content max-content;
     align-items: center;
     column-gap: 1rem;
-    padding: .5rem 0 .5rem 1.5rem
+    padding: .5rem 0 3rem 1.5rem
 }
 
 .nav_logo {
@@ -236,4 +238,48 @@ body {
 
 .gatos{
     display: flex;
+}
+
+.projetos{
+    display: flex;
+}
+
+.add {
+    margin-top: 10rem;
+    width: 5rem;
+    height: 5rem;
+    margin-left: 5rem;
+    background-color: whitesmoke;
+}
+
+.projeto-1 {
+    background-color: whitesmoke;
+    margin-top: 3rem;
+    margin-left: 2rem;
+    width: 20rem;
+    height: 20rem;
+}
+
+.projeto-2 {
+    background-color: whitesmoke;
+    margin-top: 3rem;
+    margin-left: 3rem;
+    width: 20rem;
+    height: 20rem;
+}
+
+.projeto-3 {
+    background-color: whitesmoke;
+    margin-top: 3rem;
+    margin-left: 3rem;
+    width: 20rem;
+    height: 20rem;
+}
+
+
+.tituloProjetos {
+    margin-top: 2rem;
+    font-size: 3rem;
+    color: white;
+    margin-left: 5rem;
 }
