--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,14 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Flask App{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
-<body>
+<body id="body-pd">
     {% block content %}
     {% endblock %}
+
+    <header class="header" id="header">
+        <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
+        <div class="buscar">
+            Procure por gatos, donos ou qualquer outra coisa
+        </div>
+    </header>
+    <div class="l-navbar" id="nav-bar">
+        <nav class="nav">
+            <div> 
+                <a href="{{ url_for('home') }}" class="nav_logo"> 
+                    <img src="{{ url_for('static', filename='imgs/logo.png') }}" alt="Logo" class="nav_logo-icon">
+                </a>
+                <div class="nav_list">
+                    <a href="{{ url_for('home') }}" class="nav_link">
+                        <img src="{{ url_for('static', filename='imgs/home.png') }}" alt="Rel">
+                    </a>
+                    <a href="{{ url_for('relos') }}" class="nav_link">
+                        <img src="{{ url_for('static', filename='imgs/rel.png') }}" alt="Rel">
+                    </a>
+                    <a href="#" class="nav_link">
+                        <img src="{{ url_for('static', filename='imgs/est.png') }}" alt="Est">
+                    </a>
+                    <a href="#" class="nav_link">
+                        <img src="{{ url_for('static', filename='imgs/cfg.png') }}" alt="Cfg">
+                    </a>
+                </div>
+            </div>
+            <a href="#" class="nav_link">
+                <i class='bx bx-log-out nav_icon'></i>
+                <span class="nav_name">SignOut</span>
+            </a>
+        </nav>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
